updated code fix for palyer stats

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
         <a href="schedule.html">📅 Schedule</a>
         <a href="rules.html">📋 Rules</a>
         <a href="standings.html">📊 Standings</a>
+        <a href="playerstats.html">🎾 Matchups</a>
+
     </nav>
 </header>
 
