--- a/playerstats.html
+++ b/playerstats.html
@@ -137,7 +137,7 @@
         <a href="index22.html">📅 Schedule</a>
         <a href="rules.html">📋 Rules</a>
         <a href="standings.html">📊 Standings</a>
-        <a href="player-matchups.html" aria-current="page">🎾 Matchups</a>
+        <a href="playerstats.html" aria-current="page">🎾 Matchups</a>
     </nav>
 </header>
 
