--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,8 @@
     </div>
     <nav id="siteNav" class="nav" aria-label="Primary"><a href="index.html">👥 Teams</a><a href="schedule.html"
                                                                                           aria-current="page">📅
-        Schedule</a><a href="rules.html">📋 Rules</a><a href="standings.html">📊 Standings</a></nav>
+        Schedule</a><a href="rules.html">📋 Rules</a><a href="standings.html">📊 Standings</a>           <a href="playerstats.html">🎾 Matchups</a>
+    </nav>
 </header>
 <main class="container">
     <section class="card" aria-labelledby="schedTitle"><h2 id="schedTitle" class="section-title">Tournament
