updated code fix for palyer stats

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
         <a href="rules.html">📋 Rules</a>
         <a href="standings.html">📊 Standings</a>
         <a href="playerstats.html">🎾 Matchups</a>
+        <a href="Scores.html">🎾 Scores</a>
+
 
     </nav>
 </header>
