--- a/rules.html
+++ b/rules.html
@@ -65,6 +65,8 @@
     <a href="schedule.html">📅 Schedule</a>
     <a href="rules.html" aria-current="page">📋 Rules</a>
     <a href="standings.html">📊 Standings</a>
+    <a href="Scores.html">🎾 Scores</a>
+
   </nav>
 </header>
 <main class="container">
