updated code fix for palyer stats

--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@
     </div>
     <nav id="siteNav" class="nav" aria-label="Primary"><a href="index.html">👥 Teams</a><a href="schedule.html"
                                                                                           aria-current="page">📅
-        Schedule</a><a href="rules.html">📋 Rules</a><a href="standings.html">📊 Standings</a>           <a href="playerstats.html">🎾 Matchups</a>          <a href="Scores.html">🎾 Scores</a>
+        Schedule</a><a href="rules.html">📋 Rules</a><a href="standings.html">📊 Standings</a>           <a href="playerstats.html">🎾 Matchups</a>
 
     </nav>
 </header>
