--- a/playerstats.html
+++ b/playerstats.html
@@ -138,15 +138,13 @@
         <a href="rules.html">📋 Rules</a>
         <a href="standings.html">📊 Standings</a>
         <a href="playerstats.html" aria-current="page">🎾 Matchups</a>
-        <a href="Scores.html">🎾 Scores</a>
-
     </nav>
 </header>
 
 <main class="container">
     <section class="page-header">
         <h1>🎾 Player Matchups</h1>
-        <p>Singles limits and doubles partnerships tracking</p>
+        <p>Complete player statistics and match limits tracking (Limits: 6 match days total, 3 singles match days, 3 doubles match days)</p>
     </section>
 
     <div id="loading" class="loading">Loading data...</div>
@@ -154,41 +152,15 @@
 
     <div id="content" style="display:none;">
         <div class="tabs">
-            <button class="tab-button active" onclick="switchTab('singles')">Singles Cap</button>
+            <button class="tab-button active" onclick="switchTab('players')">Player Stats</button>
+            <button class="tab-button" onclick="switchTab('singles')">Singles Cap</button>
             <button class="tab-button" onclick="switchTab('doubles')">Doubles Combos</button>
-            <button class="tab-button" onclick="switchTab('players')">Player Stats</button>
         </div>
 
-        <!-- Singles Cap -->
-        <div id="singles" class="tab-content active">
+        <!-- Player Stats (First Tab - Active by Default) -->
+        <div id="players" class="tab-content active">
             <div class="search-bar">
-                <input type="text" id="search1" placeholder="🔍 Search player..." onkeyup="filter('singles')">
-            </div>
-            <div class="card">
-                <h2>Player Activity Overview</h2>
-                <div class="table-container">
-                    <table>
-                        <thead>
-                        <tr>
-                            <th>Player</th>
-                            <th class="center-cell">Total Days</th>
-                            <th class="center-cell">Singles Days</th>
-                            <th class="center-cell">Doubles Days</th>
-                            <th class="center-cell">Singles Played</th>
-                            <th class="center-cell">Doubles Played</th>
-                            <th class="center-cell">Singles Status</th>
-                        </tr>
-                        </thead>
-                        <tbody id="singles-body"></tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-        <!-- Player Stats -->
-        <div id="players" class="tab-content">
-            <div class="search-bar">
-                <input type="text" id="search4" placeholder="🔍 Search player..." onkeyup="filter('players')">
+                <input type="text" id="search-players" placeholder="🔍 Search player..." onkeyup="filter('players')">
             </div>
             <div class="card">
                 <h2>Complete Player Statistics</h2>
@@ -197,11 +169,12 @@
                         <thead>
                         <tr>
                             <th>Player</th>
-                            <th class="center-cell">Total Days</th>
-                            <th class="center-cell">Matches</th>
+                            <th class="center-cell">Match Days</th>
+                            <th class="center-cell">Total Courts</th>
+                            <th class="center-cell">Courts Won</th>
+                            <th class="center-cell">Courts Lost</th>
                             <th class="center-cell">Singles</th>
                             <th class="center-cell">Doubles</th>
-                            <th class="center-cell">Record</th>
                             <th class="center-cell">Win %</th>
                         </tr>
                         </thead>
@@ -211,13 +184,38 @@
             </div>
         </div>
 
-        <!-- Doubles Combos -->
-        <div id="doubles" class="tab-content">
+        <!-- Singles Cap (Second Tab) -->
+        <div id="singles" class="tab-content">
             <div class="search-bar">
-                <input type="text" id="search2" placeholder="🔍 Search combo..." onkeyup="filter('doubles')">
+                <input type="text" id="search-singles" placeholder="🔍 Search player..." onkeyup="filter('singles')">
             </div>
             <div class="card">
-                <h2>Doubles Partnerships (Limit: 3 days OR 6 matches)</h2>
+                <h2>Singles Match Days Limit Tracker (Cap: 3 match days)</h2>
+                <div class="table-container">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Player</th>
+                            <th class="center-cell">Match Days Played</th>
+                            <th class="center-cell">Singles Match Days</th>
+                            <th class="center-cell">Doubles Courts</th>
+                            <th class="center-cell">Total Courts</th>
+                            <th class="center-cell">Singles Status</th>
+                        </tr>
+                        </thead>
+                        <tbody id="singles-body"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <!-- Doubles Combos (Third Tab) -->
+        <div id="doubles" class="tab-content">
+            <div class="search-bar">
+                <input type="text" id="search-doubles" placeholder="🔍 Search combo..." onkeyup="filter('doubles')">
+            </div>
+            <div class="card">
+                <h2>Doubles Partnerships (Limit: 3 match days)</h2>
                 <div id="doubles-body" class="combo-list"></div>
             </div>
         </div>
@@ -255,7 +253,7 @@
 
     // Search filter
     window.filter = (tab) => {
-      const searchId = tab === 'singles' ? 'search1' : tab === 'doubles' ? 'search2' : 'search4';
+      const searchId = `search-${tab}`;
       const search = document.getElementById(searchId).value.toLowerCase();
       const body = document.getElementById(`${tab}-body`);
       const items = tab === 'doubles' ? body.querySelectorAll('.combo-card') : body.querySelectorAll('tr');
@@ -264,8 +262,8 @@
       });
     };
 
-    // Load and process data
-    db.ref('season2Matches').on('value', (snap) => {
+    // Load and process data from Firebase (name-based structure)
+    db.ref('KOC2DB').on('value', (snap) => {
       const data = snap.val();
       if (!data) {
         document.getElementById('error').textContent = 'No data found';
@@ -274,67 +272,64 @@
         return;
       }
 
-      const singles = {};
-      const doubles = {};
       const players = {}; // Track all player activity
+      const doubles = {};
 
-      Object.values(data).forEach(match => {
+      // Process each match in the database
+      // Data structure is organized by match names (e.g., "CT vs AA", "CoCo vs Karna Crusaders")
+      Object.entries(data).forEach(([matchName, match]) => {
         if (!match.lines) return;
-        const date = match.ts ? new Date(match.ts).toISOString().split('T')[0] : null;
+
+        // Use match name as the unique identifier
+        const matchIdentifier = matchName;
 
         match.lines.forEach(line => {
           const t1 = line.players?.team1 || [];
           const t2 = line.players?.team2 || [];
-          const t1won = (line.setWins?.team1 || 0) > (line.setWins?.team2 || 0);
 
-          // Track all players
+          const g1 = line.g1 || 0;
+          const g2 = line.g2 || 0;
+          const t1won = g1 > g2;
+
+          // Track all players in this court
           t1.concat(t2).forEach(p => {
             if (!players[p]) {
               players[p] = {
-                w: 0, l: 0,
-                allDays: new Set(),
-                singlesDays: new Set(),
-                doublesDays: new Set(),
-                singles: 0,
-                doubles: 0,
-                singlesW: 0,
-                singlesL: 0
+                courtsWon: 0,
+                courtsLost: 0,
+                matchesPlayed: new Set(), // Track unique match names
+                singlesCount: 0,
+                doublesCount: 0
               };
             }
-            if (date) players[p].allDays.add(date);
 
-            const won = t1.includes(p) ? t1won : !t1won;
-            won ? players[p].w++ : players[p].l++;
+            // Add this match name to player's match list
+            players[p].matchesPlayed.add(matchIdentifier);
+
+            const playerWon = t1.includes(p) ? t1won : !t1won;
+
+            if (playerWon) {
+              players[p].courtsWon++;
+            } else {
+              players[p].courtsLost++;
+            }
 
             if (line.type === 'singles') {
-              players[p].singles++;
-              if (date) players[p].singlesDays.add(date);
-              won ? players[p].singlesW++ : players[p].singlesL++;
-            } else {
-              players[p].doubles++;
-              if (date) players[p].doublesDays.add(date);
+              players[p].singlesCount++;
+            } else if (line.type === 'doubles') {
+              players[p].doublesCount++;
             }
           });
 
-          // Singles tracking
-          if (line.type === 'singles') {
-            t1.concat(t2).forEach(p => {
-              if (!singles[p]) singles[p] = { w: 0, l: 0, days: new Set() };
-              if (date) singles[p].days.add(date);
-              if (t1.includes(p)) {
-                t1won ? singles[p].w++ : singles[p].l++;
-              } else {
-                t1won ? singles[p].l++ : singles[p].w++;
-              }
-            });
-          }
-
-          // Doubles tracking
+          // Doubles partnership tracking
           if (line.type === 'doubles' && t1.length === 2 && t2.length === 2) {
             [t1, t2].forEach((team, idx) => {
               const key = team.slice().sort().join(' & ');
-              if (!doubles[key]) doubles[key] = { w: 0, l: 0, days: new Set() };
-              if (date) doubles[key].days.add(date);
+              if (!doubles[key]) {
+                doubles[key] = { w: 0, l: 0, matchesPlayed: new Set() };
+              }
+              doubles[key].matchesPlayed.add(matchIdentifier);
+
               const won = idx === 0 ? t1won : !t1won;
               won ? doubles[key].w++ : doubles[key].l++;
             });
@@ -342,91 +337,100 @@
         });
       });
 
-      renderSingles(players);
       renderPlayers(players);
+      renderSingles(players);
       renderDoubles(doubles);
 
       document.getElementById('loading').style.display = 'none';
       document.getElementById('content').style.display = 'block';
     });
 
-    function renderSingles(playersData) {
-      const arr = Object.entries(playersData).map(([p, d]) => ({
-        p,
-        totalDays: d.allDays.size,
-        singlesDays: d.singlesDays.size,
-        doublesDays: d.doublesDays.size,
-        singlesPlayed: d.singles,
-        doublesPlayed: d.doubles,
-        singlesMaxed: d.singles >= 3
-      })).sort((a, b) => {
-        // Sort maxed singles first, then by total days
-        if (a.singlesMaxed && !b.singlesMaxed) return -1;
-        if (b.singlesMaxed && !a.singlesMaxed) return 1;
-        return b.totalDays - a.totalDays || b.singlesPlayed - a.singlesPlayed;
-      });
-
-      document.getElementById('singles-body').innerHTML = arr.map(x => {
-        const status = x.singlesMaxed ? 'MAXED' : `${3 - x.singlesPlayed} left`;
-        const statusColor = x.singlesMaxed ? 'red' : x.singlesPlayed >= 2 ? 'yellow' : 'green';
-        return `
-          <tr class="${x.singlesMaxed ? 'maxed' : ''}">
-            <td><strong>${x.p}</strong></td>
-            <td class="center-cell"><strong>${x.totalDays}</strong></td>
-            <td class="center-cell">${x.singlesDays}</td>
-            <td class="center-cell">${x.doublesDays}</td>
-            <td class="center-cell"><strong>${x.singlesPlayed}</strong>/3</td>
-            <td class="center-cell">${x.doublesPlayed}</td>
-            <td class="center-cell"><span class="badge ${statusColor}">${status}</span></td>
-          </tr>
-        `;
-      }).join('') || '<tr><td colspan="7" class="center-cell" style="color:#718096;">No player data</td></tr>';
-    }
-
+    // Render Player Stats (showing total courts first, then breakdown)
     function renderPlayers(data) {
       const arr = Object.entries(data).map(([p, d]) => ({
-        p, w: d.w, l: d.l, days: d.allDays.size, singles: d.singles, doubles: d.doubles,
-        total: d.w + d.l
-      })).sort((a, b) => b.days - a.days || b.total - a.total);
+        p,
+        matchesPlayed: d.matchesPlayed.size,
+        totalCourts: d.courtsWon + d.courtsLost,
+        courtsWon: d.courtsWon,
+        courtsLost: d.courtsLost,
+        singles: d.singlesCount,
+        doubles: d.doublesCount,
+        matchesMaxed: d.matchesPlayed.size >= 6
+      })).sort((a, b) => b.matchesPlayed - a.matchesPlayed || b.totalCourts - a.totalCourts);
 
       document.getElementById('players-body').innerHTML = arr.map(x => {
-        const pct = x.total > 0 ? (x.w / x.total * 100).toFixed(0) : 0;
+        const pct = x.totalCourts > 0 ? (x.courtsWon / x.totalCourts * 100).toFixed(0) : 0;
         const color = pct >= 60 ? 'green' : pct >= 40 ? 'yellow' : 'red';
         return `
-          <tr>
+          <tr class="${x.matchesMaxed ? 'maxed' : ''}">
             <td><strong>${x.p}</strong></td>
-            <td class="center-cell"><strong>${x.days}</strong></td>
-            <td class="center-cell">${x.total}</td>
+            <td class="center-cell"><strong>${x.matchesPlayed}</strong></td>
+            <td class="center-cell"><strong>${x.totalCourts}</strong></td>
+            <td class="center-cell">${x.courtsWon}</td>
+            <td class="center-cell">${x.courtsLost}</td>
             <td class="center-cell">${x.singles}</td>
             <td class="center-cell">${x.doubles}</td>
-            <td class="center-cell">${x.w}-${x.l}</td>
             <td class="center-cell"><span class="badge ${color}">${pct}%</span></td>
           </tr>
         `;
-      }).join('') || '<tr><td colspan="7" class="center-cell" style="color:#718096;">No player data</td></tr>';
+      }).join('') || '<tr><td colspan="8" class="center-cell" style="color:#718096;">No player data</td></tr>';
     }
 
+    // Render Singles Cap
+    function renderSingles(playersData) {
+      const arr = Object.entries(playersData).map(([p, d]) => ({
+        p,
+        matchesPlayed: d.matchesPlayed.size,
+        singlesCount: d.singlesCount,
+        doublesCount: d.doublesCount,
+        totalCourts: d.courtsWon + d.courtsLost,
+        singlesMaxed: d.singlesCount >= 3,
+        matchesMaxed: d.matchesPlayed.size >= 6
+      })).sort((a, b) => {
+        if (a.singlesMaxed && !b.singlesMaxed) return -1;
+        if (b.singlesMaxed && !a.singlesMaxed) return 1;
+        return b.matchesPlayed - a.matchesPlayed || b.singlesCount - a.singlesCount;
+      });
+
+      document.getElementById('singles-body').innerHTML = arr.map(x => {
+        const status = x.singlesMaxed ? 'MAXED' : `${3 - x.singlesCount} left`;
+        const statusColor = x.singlesMaxed ? 'red' : x.singlesCount >= 2 ? 'yellow' : 'green';
+        const rowClass = x.singlesMaxed || x.matchesMaxed ? 'maxed' : '';
+        return `
+          <tr class="${rowClass}">
+            <td><strong>${x.p}</strong></td>
+            <td class="center-cell"><strong>${x.matchesPlayed}</strong></td>
+            <td class="center-cell"><strong>${x.singlesCount}</strong>/3</td>
+            <td class="center-cell">${x.doublesCount}</td>
+            <td class="center-cell">${x.totalCourts}</td>
+            <td class="center-cell"><span class="badge ${statusColor}">${status}</span></td>
+          </tr>
+        `;
+      }).join('') || '<tr><td colspan="6" class="center-cell" style="color:#718096;">No player data</td></tr>';
+    }
+
+    // Render Doubles Combos
     function renderDoubles(data) {
       const arr = Object.entries(data).map(([k, d]) => ({
-        k, w: d.w, l: d.l, days: d.days.size, total: d.w + d.l
+        k, w: d.w, l: d.l, matchesPlayed: d.matchesPlayed.size, total: d.w + d.l
       })).sort((a, b) => {
-        const aMax = a.days >= 3 || a.total >= 6;
-        const bMax = b.days >= 3 || b.total >= 6;
+        const aMax = a.matchesPlayed >= 3;
+        const bMax = b.matchesPlayed >= 3;
         if (aMax && !bMax) return -1;
         if (bMax && !aMax) return 1;
         return b.total - a.total;
       });
 
       document.getElementById('doubles-body').innerHTML = arr.map(x => {
-        const maxed = x.days >= 3 || x.total >= 6;
+        const maxed = x.matchesPlayed >= 3;
         const pct = x.total > 0 ? (x.w / x.total * 100).toFixed(0) : 0;
         const color = pct >= 60 ? 'green' : pct >= 40 ? 'yellow' : 'red';
         return `
           <div class="combo-card ${maxed ? 'maxed' : ''}">
             <h3>${x.k} ${maxed ? '<span class="badge red">MAXED</span>' : ''}</h3>
             <div class="combo-stats">
-              <span>Matches: <strong>${x.total}</strong>/6</span>
-              <span>Days: <strong>${x.days}</strong>/3</span>
+              <span>Match Days: <strong>${x.matchesPlayed}</strong>/3</span>
+              <span>Courts: <strong>${x.total}</strong></span>
               <span>Record: <strong>${x.w}-${x.l}</strong></span>
               <span>Win%: <span class="badge ${color}">${pct}%</span></span>
             </div>
