updated code fix for palyer stats

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <a href="index.html" aria-current="page">👥 Teams</a>
         <a href="schedule.html">📅 Schedule</a>
         <a href="rules.html">📋 Rules</a>
-        <a href="standings.html">📊 Standings</a>
+        <a href="scorecard.html">📊 Standings</a>
         <a href="playerstats.html">🎾 Matchups</a>
 
 
