--- a/schedule.html
+++ b/schedule.html
@@ -15,9 +15,13 @@
         <button id="menuBtn" class="menu-btn" aria-expanded="false" aria-controls="siteNav" aria-label="Toggle Menu">☰
         </button>
     </div>
-    <nav id="siteNav" class="nav" aria-label="Primary"><a href="index.html">👥 Teams</a><a href="schedule.html"
-                                                                                          aria-current="page">📅
-        Schedule</a><a href="rules.html">📋 Rules</a><a href="standings.html">📊 Standings</a>           <a href="playerstats.html">🎾 Matchups</a>
+    <nav id="siteNav" class="nav" aria-label="Primary">
+        <a href="index.html">👥 Teams</a>
+        <a href="schedule.html" aria-current="page">📅Schedule</a>
+        <a href="schedule.html">📅 Schedule</a>
+        <a href="rules.html">📋 Rules</a>
+        <a href="scorecard.html">📊 Standings</a>
+        <a href="playerstats.html">🎾 Matchups</a>
 
     </nav>
 </header>
