--- a/rules.html
+++ b/rules.html
@@ -64,7 +64,8 @@
     <a href="index.html">👥 Teams</a>
     <a href="schedule.html">📅 Schedule</a>
     <a href="rules.html" aria-current="page">📋 Rules</a>
-    <a href="standings.html">📊 Standings</a>
+    <a href="scorecard.html">📊 Standings</a>
+    <a href="playerstats.html">🎾 Matchups</a>
   </nav>
 </header>
 <main class="container">
