updated code fix for palyer stats

--- a/scorecard.html
+++ b/scorecard.html
@@ -307,7 +307,7 @@ D/D1/D2/Doubles: Player1/Player2 vs Player3/Player4 scores (won) WINNER
   const firebaseApp = firebase.initializeApp(firebaseConfig);
   const auth = firebaseApp.auth();
   const database = firebaseApp.database();
-  const matchesRef = database.ref('KOC2DBPO');
+  const matchesRef = database.ref('KOC2DBPONEW');
 
   let authReady = false;
   function ensureAuth(){
